Fix portfolio drop down arrow on mobile

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -14,6 +14,7 @@ main {
   
   summary h1 {
     display: flex;
+    align-items: start;
   }
   
   summary h1::before {
